[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
actix-cors = "0.6"
actix-rt = "2"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "1.2", features = ["v4"] }
image = "0.24"
ndarray = "0.15"
tract-onnx = "0.19"
tract-core = "0.19"
tempfile = "3.6"
